@@ -18,6 +18,7 @@ import CardActions from '@material-ui/core/CardActions';
 import CardContent from '@material-ui/core/CardContent';
 import CircularProgress from '@material-ui/core/CircularProgress';
 import { makeStyles } from '@material-ui/core/styles';
+import Tooltip from '@material-ui/core/Tooltip';
 import Typography from '@material-ui/core/Typography';
 import AddIcon from '@material-ui/icons/Add';
 import CloudUploadOutlinedIcon from '@material-ui/icons/CloudUploadOutlined';
@@ -32,11 +33,22 @@ const useProjectTemplateStyles = makeStyles((theme) => ({
     display: 'grid',
     gridTemplateRows: '1fr min-content',
   },
-  templateCardContent: { display: 'flex', alignItems: 'center', justifyContent: 'center' },
+  templateCardContent: {
+    display: 'flex',
+    alignItems: 'center',
+    justifyContent: 'center',
+    padding: 0,
+  },
+  templateCardActions: {
+    minWidth: 0,
+  },
   projectTemplateLabel: {
     textTransform: 'none',
     fontWeight: 400,
     fontSize: theme.spacing(2),
+    textOverflow: 'ellipsis',
+    overflow: 'hidden',
+    whiteSpace: 'nowrap',
   },
 }));
 
@@ -53,10 +65,12 @@ export const ProjectTemplateCard = ({ template, running, disabled, onCreateProje
             <img height="80px" alt={`New ${template.label}`} src={httpOrigin + template.imageURL} />
           )}
         </CardContent>
-        <CardActions>
-          <Typography variant="h5" className={classes.projectTemplateLabel}>
-            + {template.label}
-          </Typography>
+        <CardActions className={classes.templateCardActions}>
+          <Tooltip title={template.label}>
+            <Typography variant="h5" className={classes.projectTemplateLabel}>
+              + {template.label}
+            </Typography>
+          </Tooltip>
         </CardActions>
       </Card>
     </Button>
@@ -70,10 +84,16 @@ const useProjectCardStyles = makeStyles((theme) => ({
     display: 'grid',
     gridTemplateRows: '1fr min-content',
   },
+  projectCardActions: {
+    minWidth: 0,
+  },
   projectCardLabel: {
     textTransform: 'none',
     fontWeight: 400,
     fontSize: theme.spacing(2),
+    textOverflow: 'ellipsis',
+    overflow: 'hidden',
+    whiteSpace: 'nowrap',
   },
   projectCardIcon: {
     fontSize: theme.spacing(8),
@@ -100,10 +120,12 @@ export const NewProjectCard = () => {
         <CardContent className={classes.blankProjectCard}>
           <AddIcon className={classes.projectCardIcon} htmlColor="white" />
         </CardContent>
-        <CardActions>
-          <Typography variant="h5" className={classes.projectCardLabel}>
-            + Blank project
-          </Typography>
+        <CardActions className={classes.projectCardActions}>
+          <Tooltip title={'Blank project'}>
+            <Typography variant="h5" className={classes.projectCardLabel}>
+              + Blank project
+            </Typography>
+          </Tooltip>
         </CardActions>
       </Card>
     </Button>
@@ -118,10 +140,12 @@ export const UploadProjectCard = () => {
         <CardContent className={classes.uploadProjectCard}>
           <CloudUploadOutlinedIcon className={classes.projectCardIcon} htmlColor="white" />
         </CardContent>
-        <CardActions>
-          <Typography variant="h5" className={classes.projectCardLabel}>
-            + Upload project
-          </Typography>
+        <CardActions className={classes.projectCardActions}>
+          <Tooltip title={'Upload project'}>
+            <Typography variant="h5" className={classes.projectCardLabel}>
+              + Upload project
+            </Typography>
+          </Tooltip>
         </CardActions>
       </Card>
     </Button>
